--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,14 +3,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.MainActivity"
+    android:background="#000000">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/imageView"
+        android:src="@drawable/bok"
+        android:scaleType="centerCrop" />
+
+    <ImageView
+        android:layout_width="310sp"
+        android:layout_height="180dp"
+        android:id="@+id/imageViewLogo"
+        android:src="@drawable/logored"
+        android:scaleType="fitCenter"
+        android:layout_marginTop="54dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Find Your Spot"
+        android:id="@+id/findRestaurantsButton"
+        android:background="@color/colorAccent"
+        android:visibility="visible"
+        android:layout_above="@+id/savedSpotButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="10dp" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="My Spots"
+        android:id="@+id/savedSpotButton"
+        android:background="@color/colorAccent"
+        android:visibility="visible"
+        android:layout_above="@+id/imageViewPower"
+        android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="350sp"
+        android:layout_height="55sp"
+        android:id="@+id/imageViewPower"
+        android:src="@drawable/backdrop"
+        android:scaleType="centerCrop"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+
 </RelativeLayout>
