build and freeze on main thread

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:id="@+id/findSpotsButton"
         android:background="#000000"
         android:visibility="visible"
-        android:layout_above="@+id/savedSpotButton"
+        android:layout_above="@+id/savedSpotsButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="10dp"
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="M y   S p o t s"
-        android:id="@+id/savedSpotButton"
+        android:id="@+id/savedSpotsButton"
         android:background="#000000"
         android:visibility="visible"
         android:textColor="#fff"
