--- a/app/src/main/res/layout/activity_spots.xml
+++ b/app/src/main/res/layout/activity_spots.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.SpotListActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="The Best Spots Around"
-        android:id="@+id/locationTextView"
-        android:layout_centerHorizontal="true" />
+    <ImageView
+        android:layout_width="130dp"
+        android:layout_height="100dp"
+        android:id="@+id/spotImageView"
+        android:src="@drawable/ico"
+        android:scaleType="centerCrop"/>
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listView"
-        android:layout_below="@+id/locationTextView"
+        android:layout_below="@+id/spotImageView"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -23,4 +25,4 @@
         android:layout_height="match_parent"
         android:id="@+id/recyclerView"/>
 
-</LinearLayout>
+</RelativeLayout>
