--- a/app/src/main/res/layout/spot_list_item.xml
+++ b/app/src/main/res/layout/spot_list_item.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingBottom="2dp">
+
     <ImageView
         android:layout_width="130dp"
         android:layout_height="100dp"
         android:id="@+id/spotImageView"
-        android:src="@drawable/logored"
+        android:src="@drawable/ico"
         android:scaleType="centerCrop"/>
 
     <LinearLayout
