--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -4,6 +4,7 @@
     <item
         android:id="@+id/action_search"
         app:showAsAction="always"
+        android:icon="@drawable/search"
         app:actionViewClass="android.support.v7.widget.SearchView"
         android:title="Search">
     </item>
