--- a/app/src/main/res/layout/spot_list_item.xml
+++ b/app/src/main/res/layout/spot_list_item.xml
@@ -7,8 +7,8 @@
     android:paddingBottom="2dp">
 
     <ImageView
-        android:layout_width="130dp"
-        android:layout_height="100dp"
+        android:layout_width="202dp"
+        android:layout_height="155dp"
         android:id="@+id/spotImageView"
         android:src="@drawable/ico"
         android:scaleType="centerCrop"/>
@@ -20,25 +20,6 @@
         android:layout_height="match_parent"
         android:padding="10dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/spotNameTextView"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:text="Spot Name"
-            android:textColor="@color/colorPrimary"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="One Cuisine Type"
-            android:id="@+id/categoryTextView"
-            android:layout_below="@+id/spotNameTextView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:textStyle="italic"/>
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -48,9 +29,36 @@
                 android:layout_height="wrap_content"
                 android:text="Rating"
                 android:id="@+id/ratingTextView"
+                android:textColor="@color/colorAccent"
                 android:layout_alignParentBottom="true"
+                android:layout_alignLeft="@+id/categoryTextView"
+                android:layout_alignStart="@+id/categoryTextView" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="One Cuisine Type"
+                android:id="@+id/categoryTextView"
+                android:textStyle="italic"
+                android:layout_centerVertical="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/spotNameTextView"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:text="Spot Name"
+                android:textColor="@color/colorPrimary"
+                android:layout_gravity="center_horizontal"
+                android:layout_alignParentTop="true"
+                android:layout_above="@+id/categoryTextView"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:layout_alignParentRight="true"
-                android:textColor="@color/colorAccent"/>
+                android:layout_alignParentEnd="true" />
         </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
