--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -3,16 +3,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.CreateAccountActivity">
+    tools:context=".ui.CreateAccountActivity"
+    android:background="@drawable/bok">
+
+    <ImageView
+        android:layout_width="310sp"
+        android:layout_height="180dp"
+        android:id="@+id/imageViewLogo"
+        android:src="@drawable/logored"
+        android:scaleType="fitCenter"
+        android:layout_alignRight="@+id/loginTextView"
+        android:layout_alignEnd="@+id/loginTextView"
+        android:layout_above="@+id/textView2"
+        android:layout_alignLeft="@+id/loginTextView"
+        android:layout_alignStart="@+id/loginTextView"
+        android:layout_alignParentTop="true" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="30dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout">
+        android:id="@+id/linearLayout"
+        android:layout_above="@+id/loginTextView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <EditText
             android:id="@+id/nameEditText"
@@ -79,17 +94,6 @@
             android:layout_marginTop="15dp"
             android:textColor="#000000" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textColor="#000000"
-            android:textStyle="bold"
-            android:textSize="15sp"
-            android:text="@string/already_have_an_account_log_in_here"
-            android:id="@+id/loginTextView"
-            android:layout_gravity="center_horizontal" />
-
     </LinearLayout>
 
     <TextView
@@ -100,6 +104,20 @@
         android:textSize="30sp"
         android:textStyle="bold"
         android:layout_above="@+id/linearLayout"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/textView2" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#fff"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:layout_marginBottom="12sp"
+        android:text="@string/already_have_an_account_log_in_here"
+        android:id="@+id/loginTextView"
+        android:layout_gravity="center_horizontal"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
