--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,16 +7,28 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ui.LoginActivity">
+    tools:context=".ui.LoginActivity"
+    android:background="@drawable/bok">
+
+    <ImageView
+        android:layout_width="310sp"
+        android:layout_height="180dp"
+        android:id="@+id/imageViewLogo"
+        android:src="@drawable/logored"
+        android:scaleType="fitCenter"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/registerTextView"
+        android:layout_alignEnd="@+id/registerTextView" />
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="30dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/linearLayout">
+        android:id="@+id/linearLayout"
+        android:layout_above="@+id/registerTextView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <EditText
             android:id="@+id/emailEditText"
@@ -42,7 +54,7 @@
             android:nextFocusDown="@+id/passwordEditText"
             android:padding="10dp"
             android:textColor="@android:color/black"
-            android:textColorHint="#fff"
+            android:textColorHint="#000000"
             android:textSize="20sp" />
 
 
@@ -54,18 +66,7 @@
             android:text="Log in"
             android:background="#eee"
             android:layout_marginTop="15dp"
-            android:textColor="#fff" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:textColor="#000000"
-            android:textStyle="bold"
-            android:textSize="15sp"
-            android:text="Don't have an account? Find your Vibe here."
-            android:id="@+id/registerTextView"
-            android:layout_gravity="center_horizontal" />
+            android:textColor="#000000" />
 
     </LinearLayout>
 
@@ -78,6 +79,19 @@
         android:textStyle="bold"
         android:layout_above="@+id/linearLayout"
         android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#c30000"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:text="Don't have an account? Find your Vibe here."
+        android:id="@+id/registerTextView"
+        android:layout_gravity="center_horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="47dp" />
 
 </RelativeLayout>
 
