--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -10,7 +10,8 @@
         android:layout_width="310sp"
         android:layout_height="180dp"
         android:id="@+id/imageViewLogo"
-        android:src="@drawable/logored"
+        android:src="@drawable/ico"
+        android:layout_marginTop="5sp"
         android:scaleType="fitCenter"
         android:layout_alignRight="@+id/loginTextView"
         android:layout_alignEnd="@+id/loginTextView"
@@ -81,7 +82,7 @@
             android:padding="10dp"
             android:layout_marginBottom="10dp"
             android:textColor="@android:color/black"
-            android:textColorHint="#000000"
+            android:textColorHint="#eee"
             android:textSize="20sp" />
 
         <Button
@@ -101,11 +102,12 @@
         android:layout_height="wrap_content"
         android:text="@string/create_account"
         android:textColor="#000000"
+        android:layout_marginBottom="-20sp"
         android:textSize="30sp"
         android:textStyle="bold"
+        android:id="@+id/textView2"
         android:layout_above="@+id/linearLayout"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/textView2" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
