--- a/app/src/main/res/layout/fragment_spot_detail.xml
+++ b/app/src/main/res/layout/fragment_spot_detail.xml
@@ -4,10 +4,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.SpotDetailFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -38,7 +34,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:textSize="20sp"
-                android:textColor="@color/colorPrimaryDark"
+                android:textColor="@color/colorAccent"
                 android:textStyle="bold" />
 
             <TextView
@@ -58,7 +54,7 @@
                 android:layout_below="@+id/spotNameTextView"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:textColor="#000000"
+                android:textColor="#c30000"
                 android:textStyle="italic" />
         </RelativeLayout>
 
@@ -88,7 +84,7 @@
                     android:textColor="#fff"
                     android:textSize="15sp"
                     android:textStyle="bold"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="20dp"
                     android:gravity="center" />
 
                 <TextView
@@ -100,7 +96,8 @@
                     android:textColor="#fff"
                     android:textSize="15sp"
                     android:textStyle="bold"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="20sp"
+                    android:layout_marginBottom="20dp"
                     android:gravity="center"/>
 
                 <TextView
@@ -112,6 +109,7 @@
                     android:textColor="#fff"
                     android:textSize="15sp"
                     android:textStyle="bold"
+                    android:layout_marginTop="20sp"
                     android:layout_marginBottom="10dp"
                     android:gravity="center_vertical"/>
 
