--- a/app/src/main/res/layout/spot_list_item.xml
+++ b/app/src/main/res/layout/spot_list_item.xml
@@ -40,7 +40,7 @@
                 android:text="One Cuisine Type"
                 android:id="@+id/categoryTextView"
                 android:textStyle="italic"
-                android:layout_centerVertical="true"
+                android:layout_above="@+id/ratingTextView"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true" />
 
